# react-agent

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  __main__.py  clear_memory.py  cot.py  eval.py  hagent.bat  hagent.sh  hagent_cli.py  llm.py  mcp_client.py  memory.py  orchestrator.py  planner.py  pyproject.toml  rag.py  react_loop.py  setup.bat  test_all.py  tot.py
.github/workflows/: daily-smoke.yml  test.yml
dashboard/: index.html  kill_old.py  server.py
docs/: EVAL_INDEX.md  EXPERIMENTAL.md  FAILURE_FLYWHEEL.md  P0_EVIDENCE_MAP.md  capability_snapshot_20260713.md  execution_agent_snapshot_20260715_v2.md  execution_agent_snapshot_20260716_v3.md  execution_snapshot_20260715.md  flywheel_closed_loop_20260716.md  public_benchmark_snapshot_offline.md  reliability_live_live_20260716.md  reliability_live_live_20260716_v2.md  reliability_live_mock_20260716.md  reliability_live_mock_20260716_v2.md
docs/daily_smoke/: README.md  VARIANCE.md  log.jsonl
docs/snapshots/: execution_agent_snapshot_20260715_v2.json  execution_agent_snapshot_20260716_v3.json  execution_snapshot_20260715.json  flywheel_closed_loop_20260716.json  public_benchmark_snapshot_offline.json  reliability_live_live_20260716.json  reliability_live_live_20260716_v2.json  reliability_live_mock_20260716.json  reliability_live_mock_20260716_v2.json
eval/: __init__.py  dataset.json  dataset.py  report.py  runner.py  scorer.py
eval/reports/: eval_20260707_142727.json
examples/: agent_to_eval.py  harness_closed_loop.py  run_daily_smoke.py  run_execution_suite.py  run_failure_flywheel.py  run_flywheel_closed_loop.py  run_public_benchmark.py  run_reliability_live.py
examples/fixtures/: harness_closed_loop.json
experiments/eval-engine/: README.md  __init__.py
experiments/langgraph/: README.md  __init__.py  demo_checkpoint_hitl.py
graph/: agent.py  context.py  llm.py  main.py  mcp.py  memory.py  orchestrator.py  prompts.py  rag.py  tools.py
graph/harness/: __init__.py  recorder.py  replay.py  sandbox.py
handwritten_react_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
harness/: __init__.py  recorder.py  replay.py  sandbox.py
notes/: 00-bug-catalog.md  01-dashboard-evolution.md  02-architecture-notes.md  03-harness-concept.md  04-optimization-log.md  05-interview-scripts.md  README.md
schemas/: README.md  harness_trajectory.schema.json
src/handwritten_react_agent/: rag.py  (+5 more)
tests/: ci_verify_integration.py  test_duplicate_guard.py  test_eval_engine_contract.py  test_execution_suite.py  test_final_answer_guard.py  test_harness_reliability.py  test_harness_schema.py  test_langgraph_harness_contract.py  test_orchestrator_isolation.py  test_public_benchmark.py  test_real_llm.py  test_reliability_live.py  test_resilience.py
tools/: __init__.py  calculator.py  dashboard.py  fetch_page.py  get_time.py  summarize.py  web_search.py
(+69 files in other folders)
