[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "react-agent"
version = "0.1.0"
description = "Learning-oriented ReAct agent runtime (reference loop + LangGraph twin; not production)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
# Core install stays light: ReAct loop / tools / harness do not need embedding models.
# Memory keyword fallback works without sklearn; semantic memory/RAG need [rag].
dependencies = []

[project.optional-dependencies]
rag = [
    "numpy>=1.24,<3",
    "scikit-learn>=1.3,<2",
    "sentence-transformers>=2.2,<4",
]
langgraph = [
    "langgraph>=0.2.28,<0.5",
    "langchain-core>=0.3,<0.4",
    "langchain-openai>=0.2,<0.4",
]
test = [
    "pytest>=9.0.3,<10",
    "pytest-cov>=4.0,<7",
    "flake8>=6.0,<8",
]
dev = [
    "react-agent[rag,test,langgraph]",
    "mypy>=1.8",
    "pip-audit>=2.6",
]

[project.scripts]
agent = "react_agent.react_loop:cli_entry"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
react_agent = ["eval/*.json", "eval/**/*.json"]

[tool.pytest.ini_options]
markers = [
    "real_llm: live LLM integration tests (need DEEPSEEK_API_KEY)",
    "real_llm_smoke: minimal live LLM subset for CI",
]
